<resources>
    <string name="app_name" translatable="false">ArenaMSK</string>
    <string name="image_description" translatable="false">image</string>

    <string name="map_api_key" translatable="false">AIzaSyAQIC305r0EfT9fPqMT2Yo6Gql8HUiej-8</string>

    <!--Toasts-->
    <string name="network_offline_text">Check your network connection</string>

    <!--Auth-->
    <string name="auth_text_new_user">New user?</string>
    <string name="auth_create_text_new_user"><u>Sign up</u></string>
    <string name="auth_text_forget_password"><u>Forgot your password?</u></string>
    <string name="sign_in">Sign in</string>
    <string name="text_continue_without_registration"><u>Continue without registration</u></string>
    <string name="edit_text_email_hint">E-mail/Phone number</string>
    <string name="edit_text_password_hint">Password</string>
    <string name="text_toolbar_sign_up">Sign up</string>
    <string name="text_sign_up">SIGN UP</string>
    <string name="text_edit_profile_btn">Save changes</string>
    <string name="edit_text_name_hint">Name</string>
    <string name="text_close_app_toast_hint">Please click BACK again to exit</string>
    <string name="text_hint_sign_up_fail">Sign up failed</string>
    <string name="text_hint_log_in_fail">Log in failed</string>
    <string name="text_hint_empty_field_error">FIELD CAN NOT BE EMPTY</string>
    <string name="text_hint_email_incorrect_error">PLEASE ENTER A VALID EMAIL ADDRESS OR PHONE</string>
    <string name="text_hint_min_length_error">MIN LENGTH IS 6 CHARACTERS</string>
    <string name="text_hint_email_exist_error">Account with that email (phone number) already exists</string>
    <string name="text_add_photo">Add photo</string>
    <string name="bad_credentials_error">Check your input data</string>

    <!--Bottom navigation titles-->
    <string name="title_menu_map">Map</string>
    <string name="title_menu_places">Places</string>
    <string name="title_menu_favourites">Favourites</string>
    <string name="title_menu_profile">Profile</string>
    <string name="text_title_place_work_time">Operating time:</string>
    <string name="text_title_place_address">Address:</string>
    <string name="text_btn_show_place_on_map">On a map</string>
    <string name="text_place_distance">%s km</string>
    <string name="text_place_feedback_number">%s marks</string>
    <string name="text_place_description_plug" translatable="false">2 крытых корта премиум классас профессиональным покрытием хард, комфортным освещением, оборудованные системой вентиляциии кондиционирования</string>
    <string name="text_fragment_favourites_title">Favourites</string>

    <!--Filter-->
    <string name="text_filter_fragment_title">Filter</string>
    <string name="text_filter_title_sport_type">Sport</string>
    <string name="text_filter_title_district">District</string>
    <string name="text_filter_title_micro_district">Micro district</string>
    <string name="text_filter_title_metro">Metro</string>
    <string name="text_filter_title_place_type">Type of site</string>
    <string name="text_filter_place_type_open">Open</string>
    <string name="text_filter_place_type_closed">Close</string>
    <string name="text_filter_title_additional">Additionally</string>
    <string name="text_filter_parking">Parking</string>
    <string name="text_filter_inventory">Inventory</string>
    <string name="text_filter_locker">Lockers</string>
    <string name="text_filter_bath">Shower</string>
    <string name="text_filter_up_to">Up to</string>
    <string name="text_filter_from">From</string>
    <string name="text_filter_founded_places">Founded %s places</string>
    <string name="text_filter_show_btn">Show</string>
    <string name="text_filter_reset_btn">Reset</string>

    <!--Profile-->
    <string name="text_profile_item_edit">Edit profile</string>
    <string name="text_profile_item_booked">Booked</string>
    <string name="text_profile_item_notifications">Notifications</string>
    <string name="text_profile_item_settings">Settings</string>
    <string name="text_profile_item_contact">Contact us</string>
    <string name="text_profile_item_exit">Quit</string>

    <!--Place detail-->
    <string-array name="place_detail_view_pager_titles">
        <item>Info</item>
        <item>Photos</item>
        <item>Reviews</item>
    </string-array>
    <string name="text_total_area_title">Total area</string>
    <string name="number_of_places_text">Number of places</string>
    <string name="book_button_text">BOOK</string>
    <string name="pay_button_text">Pay</string>
    <string name="text_recommendation">Recommend</string>
    <string name="text_no_review_yet">No reviews yet</string>
    <string name="text_no_review_yet_send_first">No reviews yet\n<u>Send first feedback</u></string>
    <string name="text_send_feedback_button">SEND FEEDBACK</string>
    <string name="place_total_area" translatable="false">%1$sм2</string>

    <string name="text_place_type_open">Open field</string>
    <string name="text_place_type_closed">Covered field</string>

    <string name="booking_section_time">Time</string>
    <string name="booking_section_price">Price,\nRUB</string>
    <string name="booking_section_status">Status</string>
    <string name="booking_status_free">Free</string>
    <string name="booking_status_not_free">Not free</string>
    <string name="places_not_found_text">Places not found</string>
    <string name="text_refresh">Try again</string>
    <string name="place_request_error_text">Couldn\'t get list of playgrounds.</string>

    <!--Booked fragment-->
    <string name="title_booked_fragment">@string/text_profile_item_booked</string>
    <string-array name="booked_view_pager_titles">
        <item>Current</item>
        <item>In history</item>
    </string-array>

    <string-array name="notifications_titles">
        <item>Turn off notifications</item>
        <item>Turn on before 1h.</item>
        <item>Turn on before 6h.</item>
        <item>Turn on before 12h.</item>
        <item>Turn on before 24h.</item>
    </string-array>

    <string name="title_edit_profile_fragment">@string/text_profile_item_edit</string>
    <string name="title_settings_fragment">@string/text_profile_item_settings</string>
    <string name="channel_name">Arena</string>
    <string name="channel_description">Arena</string>
    <string name="acception_text">Нажимая на кнопку \"Зарегистрироваться\", Вы принимаете нашу \n<a href="http://www.arenasport.me/polconf.pdf">политику конфиденциальности</a> и \n<a href="http://www.arenasport.me/polsogl.pdf">политику пользовательского соглашения</a></string>
    <string name="acception_login_text">Нажимая на кнопку \"Войти\", Вы принимаете нашу \n<a href="http://www.arenasport.me/polconf.pdf">политику конфиденциальности</a> и \n<a href="http://www.arenasport.me/polsogl.pdf">политику пользовательского соглашения</a></string>
    <string name="acception_oferta"><a href="http://www.arenasport.me/publofert.pdf">Договор публичной оферты</a></string>

</resources>
