<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.arenamsk.ui.map.MapFragment"
        android:label="@string/title_menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_places"
        android:name="com.example.arenamsk.ui.places.PlacesFragment"
        android:label="@string/title_menu_places"
        tools:layout="@layout/fragment_places" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.example.arenamsk.ui.favourites.FavouritesFragment"
        android:label="@string/title_menu_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.arenamsk.ui.profile.ProfileFragment"
        android:label="@string/title_menu_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>