<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="180dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_header_background"
        android:paddingBottom="21dp">

        <TextView
            android:id="@+id/profile_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/title_menu_profile"
            android:textColor="@color/text_color_grey"
            android:textSize="28sp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/profile_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="21dp"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="@id/profile_title"
            app:layout_constraintTop_toBottomOf="@id/profile_title"
            app:riv_oval="true"
            tools:src="@drawable/auth_background" />

        <TextView
            android:id="@+id/profile_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/text_color_grey"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/profile_avatar"
            app:layout_constraintLeft_toRightOf="@id/profile_avatar"
            app:layout_constraintTop_toBottomOf="@id/profile_title"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Владислав" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profile_item_edit"
            style="@style/ProfileTextMenuItem"
            android:layout_marginTop="24dp"
            android:text="@string/text_profile_item_edit"
            app:drawableStartCompat="@drawable/ic_profile" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profile_item_booked"
            style="@style/ProfileTextMenuItem"
            android:text="@string/text_profile_item_booked"
            app:drawableStartCompat="@drawable/ic_booked" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profile_item_notifications"
            style="@style/ProfileTextMenuItem"
            android:text="@string/text_profile_item_notifications"
            app:drawableStartCompat="@drawable/ic_notifications" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profile_item_settings"
            style="@style/ProfileTextMenuItem"
            android:text="@string/text_profile_item_settings"
            app:drawableStartCompat="@drawable/ic_settings" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profile_item_contact"
            style="@style/ProfileTextMenuItem"
            android:text="@string/text_profile_item_contact"
            app:drawableStartCompat="@drawable/ic_contact_us" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profile_item_exit"
            style="@style/ProfileTextMenuItem"
            android:text="@string/text_profile_item_exit"
            app:drawableStartCompat="@drawable/ic_exit" />

    </LinearLayout>

</LinearLayout>