<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="20dp"
            android:paddingEnd="16dp"
            android:paddingBottom="29dp">

            <TextView
                style="@style/FilterTextSubtitle"
                android:text="@string/text_filter_title_sport_type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/filter_spinner_background">

                <org.angmarch.views.NiceSpinner
                    android:id="@+id/spinner_sport_type_filter"
                    style="@style/FilterText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/filter_spinner_background"
                    app:arrowDrawable="@drawable/ic_spinner_arrow" />

            </LinearLayout>

            <TextView
                style="@style/FilterTextSubtitle"
                android:layout_marginTop="20dp"
                android:text="@string/text_filter_title_metro" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/filter_spinner_background">

                <org.angmarch.views.NiceSpinner
                    android:id="@+id/spinner_metro_filter"
                    style="@style/FilterText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/filter_spinner_background"
                    app:arrowDrawable="@drawable/ic_spinner_arrow" />

            </LinearLayout>

            <TextView
                style="@style/FilterTextSubtitle"
                android:layout_marginTop="28dp"
                android:text="@string/text_filter_title_place_type" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/FilterText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_filter_place_type_open" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/FilterText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_filter_place_type_closed" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="4dp"
                android:background="@color/filter_divider_blue" />

            <TextView
                style="@style/FilterTextSubtitle"
                android:layout_marginTop="28dp"
                android:text="@string/text_filter_title_additional" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/FilterText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/text_filter_parking" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/FilterText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_filter_inventory" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/FilterText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_filter_locker" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/FilterText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_filter_bath" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="4dp"
                android:background="@color/filter_divider_blue" />

            <TextView
                style="@style/FilterTextSubtitle"
                android:layout_marginTop="28dp"
                android:text="Стоимость, RUB" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp">

                <TextView
                    android:id="@+id/start_price_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/text_filter_from"
                    android:textColor="@color/text_color_grey"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/filter_start_price_edit_text"
                    style="@style/FilterText"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/filter_price_edit_text_background"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:minWidth="96dp"
                    android:paddingStart="8dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintLeft_toLeftOf="@id/start_price_title"
                    app:layout_constraintTop_toBottomOf="@id/start_price_title"
                    tools:text="100.00" />

                <TextView
                    android:id="@+id/end_price_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/text_filter_up_to"
                    android:textColor="@color/text_color_grey"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="@id/filter_end_price_edit_text"
                    app:layout_constraintTop_toTopOf="@id/start_price_title" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/filter_end_price_edit_text"
                    style="@style/FilterText"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/filter_price_edit_text_background"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:minWidth="96dp"
                    android:paddingStart="8dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/end_price_title"
                    tools:text="120.00" />

                <com.jaygoo.widget.RangeSeekBar
                    android:id="@+id/filter_price_range_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rsb_gravity="center"
                    app:layout_constraintTop_toBottomOf="@id/filter_start_price_edit_text"
                    app:rsb_indicator_show_mode="alwaysHide"
                    app:rsb_max="100000.00"
                    app:rsb_min="0.00"
                    app:rsb_min_interval="500"
                    app:rsb_progress_color="@color/colorPrimary" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <View
            android:id="@+id/bottom_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/filter_text_founded_places_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/text_filter_founded_places"
                android:textColor="#BDBDBD"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/filter_btn_show"
                style="@style/FilterShowButton"
                android:text="@string/text_filter_show_btn"
                app:backgroundTint="@color/auth_button_color"
                app:cornerRadius="25dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/filter_text_founded_places_count" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/filter_btn_reset"
                style="@style/FilterResetButton"
                android:layout_width="match_parent"
                android:text="@string/text_filter_reset_btn"
                app:cornerRadius="25dp"
                app:layout_constraintTop_toBottomOf="@id/filter_btn_show"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="1dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>