<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Отображаем если площадки не найдены-->
    <TextView
        android:id="@+id/places_not_found_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/places_not_found_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:visibility="gone" />

    <!--Отображаем если не удалось получить список площадок-->
    <LinearLayout
        android:id="@+id/places_request_error_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_request_error_text"
            android:textSize="18sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/try_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_refresh"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>