<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_description"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop"
        android:src="@drawable/auth_background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            tools:context=".ui.AuthActivity">

            <TextView
                android:id="@+id/text_new_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="51dp"
                android:gravity="center"
                android:text="@string/auth_text_new_user"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/auth_text_color_secondary"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_create_new_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/auth_create_text_new_user"
                android:textColor="@color/auth_text_color_primary"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/text_new_user" />

            <ImageView
                android:id="@+id/auth_logo_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="62dp"
                android:contentDescription="@string/image_description"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_create_new_user"
                app:srcCompat="@drawable/ic_logo_auth_screen" />

            <com.arenabooking.arenamsk.custom_view.auth_edit_text.CustomEmailEditText
                android:id="@+id/auth_email_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                app:layout_constraintTop_toBottomOf="@id/auth_logo_image" />

            <com.arenabooking.arenamsk.custom_view.auth_edit_text.CustomPasswordEditText
                android:id="@+id/auth_password_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/auth_email_text_layout" />

            <TextView
                android:id="@+id/text_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/auth_text_forget_password"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/auth_password_text_layout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_log_in"
                style="@style/AuthButton"
                android:text="@string/sign_in"
                app:backgroundTint="@color/auth_button_color"
                app:cornerRadius="25dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_forget_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_without_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:drawablePadding="16dp"
                android:text="@string/text_continue_without_registration"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:drawableEndCompat="@drawable/ic_arrow_right_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_log_in" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>